# binja-superh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fetch-parse.py
src/: arch_superh.cpp  branches.cpp  branches.h  disasm-gen.inc  disasm.cpp  disasm.h  il.cpp  il.h  sh_disasm.cpp
test/: CMakeLists.txt  il_tests.cpp
types/: linux-superh.c
